WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206261
Keep RefPtr instead of raw pointer to message queue on WebCoreResourceHandleAsOperationQueueDelegate
https://bugs.webkit.org/show_bug.cgi?id=206261
Summary
Keep RefPtr instead of raw pointer to message queue on WebCoreResourceHandleA...
Alex Christensen
Reported
2020-01-14 14:37:04 PST
Keep WeakPtrs instead of raw pointers on WebCoreResourceHandleAsOperationQueueDelegate
Attachments
Patch
(10.91 KB, patch)
2020-01-14 15:08 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(10.55 KB, patch)
2020-01-14 15:09 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(10.22 KB, patch)
2020-01-14 15:13 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(18.34 KB, patch)
2020-01-14 15:38 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(18.59 KB, patch)
2020-01-14 15:54 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(18.91 KB, patch)
2020-01-14 19:43 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(18.81 KB, patch)
2020-01-14 20:46 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(19.23 KB, patch)
2020-01-15 12:45 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(19.44 KB, patch)
2020-01-15 16:04 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(8)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2020-01-14 15:08:07 PST
Created
attachment 387708
[details]
Patch
Alex Christensen
Comment 2
2020-01-14 15:09:47 PST
Created
attachment 387710
[details]
Patch
Alex Christensen
Comment 3
2020-01-14 15:13:55 PST
Created
attachment 387711
[details]
Patch
Alex Christensen
Comment 4
2020-01-14 15:38:19 PST
Created
attachment 387714
[details]
Patch
Alex Christensen
Comment 5
2020-01-14 15:54:30 PST
Created
attachment 387717
[details]
Patch
Alex Christensen
Comment 6
2020-01-14 19:43:17 PST
Created
attachment 387748
[details]
Patch
Alex Christensen
Comment 7
2020-01-14 20:46:52 PST
Created
attachment 387749
[details]
Patch
Ryosuke Niwa
Comment 8
2020-01-14 21:48:21 PST
<
rdar://problem/57562592
>
David Kilzer (:ddkilzer)
Comment 9
2020-01-15 10:43:23 PST
Comment on
attachment 387749
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=387749&action=review
r=me if code in CurlRequest.h is okay.
> Source/WebCore/platform/network/curl/CurlRequest.h:67 > + static Ref<CurlRequest> create(const ResourceRequest& request, CurlRequestClient& client, ShouldSuspend shouldSuspend = ShouldSuspend::No, EnableMultipart enableMultipart = EnableMultipart::No, CaptureNetworkLoadMetrics captureMetrics = CaptureNetworkLoadMetrics::Basic, RefPtr<SynchronousLoaderMessageQueue>&& messageQueue = nullptr)
Is assigning `nullptr` to the default value of a RefPtr<...>&& type allowed?
Alex Christensen
Comment 10
2020-01-15 12:45:37 PST
Created
attachment 387824
[details]
Patch
Alex Christensen
Comment 11
2020-01-15 16:04:05 PST
Created
attachment 387862
[details]
Patch
Alex Christensen
Comment 12
2020-01-15 16:07:57 PST
(In reply to David Kilzer (:ddkilzer) from
comment #9
)
> Is assigning `nullptr` to the default value of a RefPtr<...>&& type allowed?
It is!
WebKit Commit Bot
Comment 13
2020-01-15 18:00:21 PST
Comment on
attachment 387862
[details]
Patch Clearing flags on attachment: 387862 Committed
r254659
: <
https://trac.webkit.org/changeset/254659
>
WebKit Commit Bot
Comment 14
2020-01-15 18:00:23 PST
All reviewed patches have been landed. Closing bug.
Fujii Hironori
Comment 15
2020-01-16 04:45:49 PST
Committed
r254673
: <
https://trac.webkit.org/changeset/254673
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug