Keep RefPtr instead of raw pointer to message queue on WebCoreResourceHandleAsOperationQueueDelegate https://bugs.webkit.org/show_bug.cgi?id=206261 <rdar://problem/57562592>

Patch by Alex Christensen <achristensen@webkit.org> on 2020-01-15
Reviewed by David Kilzer.

There's no reason to keep a raw pointer when we can keep a smart pointer.
This will make this more robust against someone forgetting to clear this pointer value.

* platform/network/ResourceHandle.h:
* platform/network/SynchronousLoaderClient.cpp:
(WebCore::SynchronousLoaderClient::SynchronousLoaderClient):
(WebCore::SynchronousLoaderClient::didFinishLoading):
(WebCore::SynchronousLoaderClient::didFail):
* platform/network/SynchronousLoaderClient.h:
(WebCore::SynchronousLoaderMessageQueue::create):
(WebCore::SynchronousLoaderMessageQueue::append):
(WebCore::SynchronousLoaderMessageQueue::kill):
(WebCore::SynchronousLoaderMessageQueue::killed const):
(WebCore::SynchronousLoaderMessageQueue::waitForMessage):
* platform/network/mac/ResourceHandleMac.mm:
(WebCore::ResourceHandle::makeDelegate):
* platform/network/mac/WebCoreResourceHandleAsOperationQueueDelegate.h:
* platform/network/mac/WebCoreResourceHandleAsOperationQueueDelegate.mm:
(-[WebCoreResourceHandleAsOperationQueueDelegate callFunctionOnMainThread:]):
(-[WebCoreResourceHandleAsOperationQueueDelegate initWithHandle:messageQueue:]):
(-[WebCoreResourceHandleAsOperationQueueDelegate connection:willSendRequest:redirectResponse:]):

Canonical link: https://commits.webkit.org/219411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254659 268f45cc-cd09-0410-ab3c-d52691b4dbfc